Added document_hash